--- a/test/subtract-test.css
+++ b/test/subtract-test.css
@@ -1,77 +1,81 @@
-/*
-  - non-number
-  - negative number
-  - unitless number
-  - matched units
-  - mixed units
-  - unit zero
-  - unitless zero
-*/
 .subtract {
   /*
-    non-number
-    ============
+  invalid args
+  ////////////////////////
+  content: "bool is an invalid operand";
+  content: "bool is an invalid operand";
+  content: "bool is an invalid operand";
+  content: "list is an invalid operand";
+  content: "list is an invalid operand";
   */
-  content: calc(1.5em - (foo));
-  error: "no error calls registered";
-  content: calc((foo) - 1.5em);
-  error: "no error calls registered";
-  error: "bool is invalid operand";
-  error: "bool is invalid operand";
-  error: "bool is invalid operand";
-  error: "list is invalid operand";
-  error: "list is invalid operand";
+  content: "bool is an invalid operand";
+  content: "bool is an invalid operand";
+  content: "bool is an invalid operand";
+  content: "list is an invalid operand";
+  content: "list is an invalid operand";
   /*
-    negative number
-    ============
-    2.5em
-    calc(1.5em + 1rem)
-    -2.5em
-    calc(-1rem - 1.5em)
+  string arguments: calc() or var()
+  ////////////////////////
+  content: calc(1.5em - var(--foo));
+  content: calc(var(--foo) - 1.5em);
+  content: calc(1.5em - (100% - 10px));
+  content: calc((100% - 10px) - 1.5em);
+  */
+  content: calc(1.5em - var(--foo));
+  content: calc(var(--foo) - 1.5em);
+  content: calc(1.5em - (100% - 10px));
+  content: calc((100% - 10px) - 1.5em);
+  /*
+  negative number
+  ////////////////////////
+  content: 2.5em;
+  content: calc(1.5em + 1rem);
+  content: -2.5em;
+  content: calc(-1rem - 1.5em);
   */
   content: 2.5em;
   content: calc(1.5em + 1rem);
   content: -2.5em;
   content: calc(-1rem - 1.5em);
   /*
-    unitless number
-    ============
-    -1
-    2.5em
-    -2.5em
+  unitless number
+  ////////////////////////
+  content: -1;
+  content: 2.5em;
+  content: -2.5em;
   */
   content: -1;
   content: 2.5em;
   content: -2.5em;
   /*
-    matched units
-    ============
-    0.5em
-    -0.5em
+  matched units
+  ////////////////////////
+  content: 0.5em;
+  content: -0.5em;
   */
   content: 0.5em;
   content: -0.5em;
   /*
-    mixed units
-    ============
-    calc(1.5em - 1rem)
-    calc(1rem - 1.5em)
+  mixed units
+  ////////////////////////
+  content: calc(1.5em - 1rem);
+  content: calc(1rem - 1.5em);
   */
   content: calc(1.5em - 1rem);
   content: calc(1rem - 1.5em);
   /*
-    unit zero
-    ============
-    -2em
-    2em
+  unitless zero
+  ////////////////////////
+  content: -2em;
+  content: 2em;
   */
   content: -2em;
   content: 2em;
   /*
-    unitless zero
-    ============
-    calc(0px - 2em)
-    2em
+  unit zero
+  ////////////////////////
+  content: calc(0px - 2em);
+  content: 2em;
   */
   content: calc(0px - 2em);
   content: 2em;
