--- a/test/subtract-test.scss
+++ b/test/subtract-test.scss
@@ -1,5 +1,4 @@
-@import 'peers';
-@import '../index';
+@import 'deps';
 
 //            _     _                  _
 //           | |   | |                | |
@@ -8,89 +7,88 @@
 // \__ \ |_| | |_) | |_| | | (_| | (__| |_
 // |___/\__,_|_.__/ \__|_|  \__,_|\___|\__|
 
-/*
-  - non-number
-  - negative number
-  - unitless number
-  - matched units
-  - mixed units
-  - unit zero
-  - unitless zero
-*/
 
 $st-catch: true !global;
 
 .subtract {
   /*
-    non-number
-    ============
+  invalid args
+  ////////////////////////
+  content: "bool is an invalid operand";
+  content: "bool is an invalid operand";
+  content: "bool is an invalid operand";
+  content: "list is an invalid operand";
+  content: "list is an invalid operand";
   */
-  content: subtract(1.5em, 'foo');
-  error: last-error();
-  content: subtract('foo', 1.5em);
-  error: last-error();
-  content: subtract(1.5em, false);
-  error: last-error();
-  content: subtract(false, 1.5);
-  error: last-error();
-  content: subtract(false, 1.5em);
-  error: last-error();
-  content: subtract(1.5em, (1em 3));
-  error: last-error();
-  content: subtract((foo bar), 1.5em);
-  error: last-error();
+  content: inspect(subtract(1.5em, false) or last-error());
+  content: inspect(subtract(false, 1.5) or last-error());
+  content: inspect(subtract(false, 1.5em) or last-error());
+  content: inspect(subtract(1.5em, (1em 3)) or last-error());
+  content: inspect(subtract((foo bar), 1.5em) or last-error());
   /*
-    negative number
-    ============
-    2.5em
-    calc(1.5em + 1rem)
-    -2.5em
-    calc(-1rem - 1.5em)
+  string arguments: calc() or var()
+  ////////////////////////
+  content: calc(1.5em - var(--foo));
+  content: calc(var(--foo) - 1.5em);
+  content: calc(1.5em - (100% - 10px));
+  content: calc((100% - 10px) - 1.5em);
   */
-  content: subtract(1.5em, -1em);
-  content: subtract(1.5em, -1rem);
-  content: subtract(-1em, 1.5em);
-  content: subtract(-1rem, 1.5em);
+  content: inspect(subtract(1.5em, var(--foo)) or last-error());
+  content: inspect(subtract(var(--foo), 1.5em) or last-error());
+  content: inspect(subtract(1.5em, calc(100% - 10px)) or last-error());
+  content: inspect(subtract(calc(100% - 10px), 1.5em) or last-error());
   /*
-    unitless number
-    ============
-    -1
-    2.5em
-    -2.5em
+  negative number
+  ////////////////////////
+  content: 2.5em;
+  content: calc(1.5em + 1rem);
+  content: -2.5em;
+  content: calc(-1rem - 1.5em);
   */
-  content: subtract(2,3);
-  content: subtract(1.5em, -1);
-  content: subtract(-1, 1.5em);
+  content: inspect(subtract(1.5em, -1em) or last-error());
+  content: inspect(subtract(1.5em, -1rem) or last-error());
+  content: inspect(subtract(-1em, 1.5em) or last-error());
+  content: inspect(subtract(-1rem, 1.5em) or last-error());
   /*
-    matched units
-    ============
-    0.5em
-    -0.5em
+  unitless number
+  ////////////////////////
+  content: -1;
+  content: 2.5em;
+  content: -2.5em;
   */
-  content: subtract(1.5em, 1em);
-  content: subtract(1em, 1.5em);
+  content: inspect(subtract(2,3) or last-error());
+  content: inspect(subtract(1.5em, -1) or last-error());
+  content: inspect(subtract(-1, 1.5em) or last-error());
   /*
-    mixed units
-    ============
-    calc(1.5em - 1rem)
-    calc(1rem - 1.5em)
+  matched units
+  ////////////////////////
+  content: 0.5em;
+  content: -0.5em;
   */
-  content: subtract(1.5em, 1rem);
-  content: subtract(1rem, 1.5em);
+  content: inspect(subtract(1.5em, 1em) or last-error());
+  content: inspect(subtract(1em, 1.5em) or last-error());
   /*
-    unit zero
-    ============
-    -2em
-    2em
+  mixed units
+  ////////////////////////
+  content: calc(1.5em - 1rem);
+  content: calc(1rem - 1.5em);
   */
-  content: subtract(0, 2em);
-  content: subtract(2em, 0);
+  content: inspect(subtract(1.5em, 1rem) or last-error());
+  content: inspect(subtract(1rem, 1.5em) or last-error());
   /*
-    unitless zero
-    ============
-    calc(0px - 2em)
-    2em
+  unitless zero
+  ////////////////////////
+  content: -2em;
+  content: 2em;
   */
-  content: subtract(0px, 2em);
-  content: subtract(2em, 0px);
+  content: inspect(subtract(0, 2em) or last-error());
+  content: inspect(subtract(2em, 0) or last-error());
+  /*
+  unit zero
+  ////////////////////////
+  content: calc(0px - 2em);
+  content: 2em;
+  */
+  content: inspect(subtract(0px, 2em) or last-error());
+  content: inspect(subtract(2em, 0px) or last-error());
 }
