re-org tests; all passing

--- a/_index.scss
+++ b/_index.scss
@@ -5,5 +5,5 @@
 // \__ \ (_| \__ \__ \     | (_| (_| | | (__
 // |___/\__,_|___/___/      \___\__,_|_|\___|
 
-@import 'sass/private';
-@import 'sass/public';
+@import 'scss/private';
+@import 'scss/public';
