--- a/tests/renders/add.dartsass.css
+++ b/tests/renders/add.dartsass.css
@@ -1,15 +1,3 @@
-@import 'deps';
-
-//            _     _
-//           | |   | |
-//   __ _  __| | __| |
-//  / _` |/ _` |/ _` |
-// | (_| | (_| | (_| |
-//  \__,_|\__,_|\__,_|
-
-
-$st-catch: true !global;
-
 .add {
   /*
   invalid args
@@ -20,15 +8,15 @@ $st-catch: true !global;
   error: "list is an invalid operand";
   error: "list is an invalid operand";
   */
-  content: add(1.5em, false);
+  content: "ERROR: bool is an invalid operand";
   error: last-error();
-  content: add(false, 1.5);
+  content: "ERROR: bool is an invalid operand";
   error: last-error();
-  content: add(false, 1.5em);
+  content: "ERROR: bool is an invalid operand";
   error: last-error();
-  content: add(1.5em, (1em 3));
+  content: "ERROR: list is an invalid operand";
   error: last-error();
-  content: add((foo bar), 1.5em);
+  content: "ERROR: list is an invalid operand";
   error: last-error();
   /*
   string arguments: calc() or var()
@@ -38,10 +26,10 @@ $st-catch: true !global;
   content: calc(1.5em + (100% - 10px));
   content: calc((100% - 10px) + 1.5em);
   */
-  content: add(1.5em, var(--foo));
-  content: add(var(--foo), 1.5em);
-  content: add(1.5em, calc(100% - 10px));
-  content: add(calc(100% - 10px), 1.5em);
+  content: calc(1.5em + var(--foo));
+  content: calc(var(--foo) + 1.5em);
+  content: calc(1.5em + (100% - 10px));
+  content: calc((100% - 10px) + 1.5em);
   /*
   negative number
   ////////////////////////
@@ -50,10 +38,10 @@ $st-catch: true !global;
   content: 0.5em;
   content: calc(-1rem + 1.5em);
   */
-  content: add(1.5em, -1em);
-  content: add(1.5em, -1rem);
-  content: add(-1em, 1.5em);
-  content: add(-1rem, 1.5em);
+  content: 0.5em;
+  content: calc(1.5em - 1rem);
+  content: 0.5em;
+  content: calc(-1rem + 1.5em);
   /*
   unitless number
   ////////////////////////
@@ -61,39 +49,39 @@ $st-catch: true !global;
   content: 0.5em;
   content: 0.5em;
   */
-  content: add(2,3);
-  content: add(1.5em, -1);
-  content: add(-1, 1.5em);
+  content: 5;
+  content: 0.5em;
+  content: 0.5em;
   /*
   matched units
   ////////////////////////
   content: 2.5em;
   content: 2.5em;
   */
-  content: add(1.5em, 1em);
-  content: add(1em, 1.5em);
+  content: 2.5em;
+  content: 2.5em;
   /*
   mixed units
   ////////////////////////
   content: calc(1.5em + 1rem);
   content: calc(1rem + 1.5em);
   */
-  content: add(1.5em, 1rem);
-  content: add(1rem, 1.5em);
+  content: calc(1.5em + 1rem);
+  content: calc(1rem + 1.5em);
   /*
   unitless zero
   ////////////////////////
   content: 2em;
   content: 2em;
   */
-  content: add(0, 2em);
-  content: add(2em, 0);
+  content: 2em;
+  content: 2em;
   /*
   unit zero
   ////////////////////////
   content: 2em;
   content: 2em;
   */
-  content: add(0px, 2em);
-  content: add(2em, 0px);
+  content: 2em;
+  content: 2em;
 }
