--- a/tests/divide.scss
+++ b/tests/divide.scss
@@ -14,33 +14,33 @@ $throw-catch: true !global;
   /*
   non-number
   ////////////////////////
-  content: "bool is an invalid operand";
-  content: "bool is an invalid operand";
-  content: "bool is an invalid operand";
-  content: "list is an invalid operand";
-  content: "list is an invalid operand";
+  content: "ERROR: bool is an invalid operand";
+  content: "ERROR: bool is an invalid operand";
+  content: "ERROR: bool is an invalid operand";
+  content: "ERROR: list is an invalid operand";
+  content: "ERROR: list is an invalid operand";
   */
-  content: inspect(divide(1.5em, false) or last-error());
-  content: inspect(divide(false, 1.5) or last-error());
-  content: inspect(divide(false, 1.5em) or last-error());
-  content: inspect(divide(1.5em, (1em 3)) or last-error());
-  content: inspect(divide((foo bar), 1.5em) or last-error());
+  content: inspect(divide(1.5em, false));
+  content: inspect(divide(false, 1.5));
+  content: inspect(divide(false, 1.5em));
+  content: inspect(divide(1.5em, (1em 3)));
+  content: inspect(divide((foo bar), 1.5em));
   /*
   string arguments
   ////////////////////////
   content: calc(1.5em / var(--foo));
-  content: "1.5em is an invalid divisor";
+  content: "ERROR: 1.5em is an invalid divisor";
   content: calc(var(--foo) / 2);
   content: calc(1.5em / calc(100% - 10px));
-  content: "1.5em is an invalid divisor";
+  content: "ERROR: 1.5em is an invalid divisor";
   content: calc((100% - 10px) / 2);
   */
-  content: inspect(divide(1.5em, var(--foo)) or last-error());
-  content: inspect(divide(var(--foo), 1.5em) or last-error());
-  content: inspect(divide(var(--foo), 2) or last-error());
-  content: inspect(divide(1.5em, calc(100% - 10px)) or last-error());
-  content: inspect(divide(calc(100% - 10px), 1.5em) or last-error());
-  content: inspect(divide(calc(100% - 10px), 2) or last-error());
+  content: inspect(divide(1.5em, var(--foo)));
+  content: inspect(divide(var(--foo), 1.5em));
+  content: inspect(divide(var(--foo), 2));
+  content: inspect(divide(1.5em, calc(100% - 10px)));
+  content: inspect(divide(calc(100% - 10px), 1.5em));
+  content: inspect(divide(calc(100% - 10px), 2));
   /*
   negative numbers
   ////////////////////////
@@ -49,26 +49,26 @@ $throw-catch: true !global;
   content: -0.5em;
   content: calc(var(--bar) / 2);
   */
-  content: inspect(divide(var(--bar), -2) or last-error());
-  content: inspect(divide(1.5em, -2) or last-error());
-  content: inspect(divide(-1em, 2) or last-error());
-  content: inspect(divide(var(--bar), 2) or last-error());
+  content: inspect(divide(var(--bar), -2));
+  content: inspect(divide(1.5em, -2));
+  content: inspect(divide(-1em, 2));
+  content: inspect(divide(var(--bar), 2));
   /*
   bad divisors
   ////////////////////////
-  content: "0 is an invalid divisor";
-  content: "list is an invalid operand";
-  content: "null is an invalid divisor";
+  content: "ERROR: 0 is an invalid divisor";
+  content: "ERROR: list is an invalid operand";
+  content: "ERROR: null is an invalid divisor";
   */
-  content: inspect(divide(2, 0) or last-error());
-  content: inspect(divide(1.5em, (a b)) or last-error());
-  content: inspect(divide(-1, null) or last-error());
+  content: inspect(divide(2, 0));
+  content: inspect(divide(1.5em, (a b)));
+  content: inspect(divide(-1, null));
   /*
   unit vs unitless zero
   ////////////////////////
   content: 0%;
   content: 0%;
   */
-  content: inspect(divide(0px, 2) or last-error());
-  content: inspect(divide(0, 2) or last-error());
+  content: inspect(divide(0px, 2));
+  content: inspect(divide(0, 2));
 }
