--- a/tests/renders/divide.libsass.css
+++ b/tests/renders/divide.libsass.css
@@ -2,11 +2,11 @@
   /*
   non-number
   ////////////////////////
-  content: "bool is an invalid operand";
-  content: "bool is an invalid operand";
-  content: "bool is an invalid operand";
-  content: "list is an invalid operand";
-  content: "list is an invalid operand";
+  content: "ERROR: bool is an invalid operand";
+  content: "ERROR: bool is an invalid operand";
+  content: "ERROR: bool is an invalid operand";
+  content: "ERROR: list is an invalid operand";
+  content: "ERROR: list is an invalid operand";
   */
   content: "ERROR: bool is an invalid operand";
   content: "ERROR: bool is an invalid operand";
@@ -17,10 +17,10 @@
   string arguments
   ////////////////////////
   content: calc(1.5em / var(--foo));
-  content: "1.5em is an invalid divisor";
+  content: "ERROR: 1.5em is an invalid divisor";
   content: calc(var(--foo) / 2);
   content: calc(1.5em / calc(100% - 10px));
-  content: "1.5em is an invalid divisor";
+  content: "ERROR: 1.5em is an invalid divisor";
   content: calc((100% - 10px) / 2);
   */
   content: calc(1.5em / var(--foo));
@@ -44,9 +44,9 @@
   /*
   bad divisors
   ////////////////////////
-  content: "0 is an invalid divisor";
-  content: "list is an invalid operand";
-  content: "null is an invalid divisor";
+  content: "ERROR: 0 is an invalid divisor";
+  content: "ERROR: list is an invalid operand";
+  content: "ERROR: null is an invalid divisor";
   */
   content: "ERROR: 0 is an invalid divisor";
   content: "ERROR: list is an invalid operand";
