--- a/tests/renders/subtract.libsass.css
+++ b/tests/renders/subtract.libsass.css
@@ -2,11 +2,11 @@
   /*
   invalid args
   ////////////////////////
-  content: "bool is an invalid operand";
-  content: "bool is an invalid operand";
-  content: "bool is an invalid operand";
-  content: "list is an invalid operand";
-  content: "list is an invalid operand";
+  content: "ERROR: bool is an invalid operand";
+  content: "ERROR: bool is an invalid operand";
+  content: "ERROR: bool is an invalid operand";
+  content: "ERROR: list is an invalid operand";
+  content: "ERROR: list is an invalid operand";
   */
   content: "ERROR: bool is an invalid operand";
   content: "ERROR: bool is an invalid operand";
